profiling-using-exp-runner/backup_FINAL_RESULTS/edit_experiment_1/run_8_repetition_0/energibridge.log
sampling interval: 200, target function: edit_distance_lru_cache, input size: 12
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.edit as module; board = [[0 for _ in range(12)] for _ in range(12)]；X = tuple(map(tuple, board));X = tuple(np.random.random(12)); module.edit_distance_lru_cache(X,0)
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 7.352704467773437 for 0.24007909 sec of execution.
